manifests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cs2
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops
---
apiVersion: v1
kind: Namespace
metadata:
  name: automation
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: v1
kind: Namespace
metadata:
  name: mail
