manifests/mail-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-server
  namespace: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-server
  template:
    metadata:
      labels:
        app: mail-server
    spec:
      containers:
        - name: mailserver
          image: analogic/poste.io:latest
          ports:
            - containerPort: 25
            - containerPort: 587
            - containerPort: 993
          volumeMounts:
            - name: mail-data
              mountPath: /data
      volumes:
        - name: mail-data
          persistentVolumeClaim:
            claimName: mail-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mail-server
  namespace: mail
spec:
  selector:
    app: mail-server
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
    - name: imaps
      port: 993
      targetPort: 993
